--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "pm": "^2.2.6"
   }
 }
